[package]
name = "standard-atmosphere"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
description = "International Standard Atmosphere (ISA / U.S. Standard Atmosphere 1976) with flight-level, pressure-altitude, and geopotential-height conversions."
repository = "https://github.com/NewEarthTech/standard-atmosphere"
documentation = "https://docs.rs/standard-atmosphere"
readme = "README.md"
keywords = ["atmosphere", "isa", "aviation", "meteorology", "altitude"]
categories = ["aerospace", "science", "mathematics"]

[lib]
path = "src/lib.rs"

[dependencies]
